<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="10"
    android:orientation="vertical">
    <EditText
        android:text="@string/link_web"
        android:id="@+id/edittextWeb"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_web"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/buttonWeb"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_web"/>
    <EditText
        android:id="@+id/edittextLocation"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_location"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/buttonLocation"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_location"/>
    <EditText
        android:id="@+id/edittextShare"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_Info_share"/>
    <Button
        android:id="@+id/buttonShare"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_share"/>
    <Button
        android:id="@+id/buttoncapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_capture_photo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
</LinearLayout>